# asense

./: .gitignore  Cargo.toml  DONATE.md  README.md  install.sh  plan.md  uninstall.sh
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  compatibility_report.yml
.github/workflows/: ci.yml  release.yml
assets/: asense.desktop  style.css
debian/: README.source  asense-configure-user  asense-configure-user.8  asense-shortcut  asense.1  asense.dkms  asense.docs  asense.install  asense.manpages  cargo-config.toml  changelog  clean  control  copyright  io.github.fladirm.asense.metainfo.xml  postinst  postrm  preinst  prerm  rules  uninstall.sh
debian/source/: options
docs/: RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.2.1.md  RELEASE_NOTES_v0.2.2.md  RELEASING.md
kernel/: Makefile  asense_rgb.c  dkms.conf
packaging/: 71-asense-hid.rules  90-asense-predator-key.hwdb  asense-system-sleep  asense.service  asense.socket.in  common.sh
scripts/: package-release.sh  verify-release.sh
src/: app.rs  asensed.rs  control.rs  daemon.rs  gui_instance.rs  hardware.rs  lib.rs  lighting.rs  main.rs  mutation_lock.rs  nvidia.rs  platform.rs  probe.rs  telemetry.rs  tuning.rs
src/app/: docs_modal.rs  paypal_qr_base64.txt
src/lighting/: enek5130.rs
tests/: kernel_rgb_protocol.rs
