[package]
name = "asense"
version = "0.1.1"
edition = "2024"
license = "GPL-2.0-only"
description = "Native Acer Predator PHN16-72 control panel"
authors = ["Fladirmacht <fladirmacht@gmail.com>"]
repository = "https://github.com/fladirm/asense"
publish = false

[[bin]]
name = "asense"
path = "src/main.rs"
required-features = ["gui"]

[[bin]]
name = "asensed"
path = "src/asensed.rs"

[lib]
name = "asense_core"
path = "src/lib.rs"

[features]
default = ["gui"]
gui = [
  "dep:dioxus",
  "dep:dioxus-desktop",
  "dep:futures-util",
  "dep:glib",
]

[dependencies]
dioxus = { version = "0.7.9", default-features = false, features = ["macro", "html", "signals", "hooks", "document", "desktop", "launch"], optional = true }
dioxus-desktop = { version = "0.7.9", optional = true }
futures-util = { version = "0.3", optional = true }
glib = { version = "0.18", optional = true }
libc = "0.2"
libloading = "0.8.9"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
